--- a/assessment.html
+++ b/assessment.html
@@ -5,6 +5,118 @@
     <title></title>
   </head>
   <body>
+    <h1>My First HTML Page</h1>
+    <p><strong>Pokem</strong> ipsum dolor sit amet Leavanny Seviper Venomoth Yamask Plusle Chandelure.
+    Body Slam Taillow Electabuzz Skiploom Seismitoad Electrode Kabuto. Harden Buizel
+    Swinub Lumineon Bayleef Ultra Ball Ponyta. Squirtle Togepi Dewgong Wingull
+    Lumineon Toxicroak Fire Red. Fire Kyurem Pelipper Lumineon Genesect Swablu
+    prepare for trouble. Blastoise Yanma Pikachu Exeggutor Lombre Abomasnow Vespiquen.
+    Pikachu Venipede Purrloin Drifloon Ariados Emolga Kadabra. </p>
+    <p><i><strong> &emsp; Middle paragraph </strong>Sand-Attack Rampardos Crustle
+    Sandshrew Pinsir Gabite Jirachi. Johto Potion gotta catch 'em all Karrablast
+    Snorunt Goldeen Dragonair. Soul Badge deserunt mollit Poliwhirl Gigalith consectetur
+    &emsp; adipisicing elit Ghost Swift.Pikachu Voltorb Mantine Teddiursa Cranidos Exeggcute
+    Venonat. Johto Elekid fishing rod gotta catch 'em all Venomoth Kirlia Uxie. Anim id
+    est laborum Altaria Glitch City Zoroar relicanth
+    &emsp; Bonsly Grovyle. Lorem ipsum dolor sit
+    amet Drapion Mewtwo Tynamo Kabutops Treecko Leech Seed. Rock Raticate Klink Haxorus
+    Spinarak Beldum to train them is my cause. Hydro Pump Pichu Piplup Mystery Gift
+    &emsp; Soda Pop Landorus sunt in culpa qui officia. Celadon City Zebstrika Bonsly Chansey Darumaka
+    </p></i>
 
+    <strong>Houndoom</strong> Miltank. Mirror Move Dewgong Charmeleon prepare for trouble Teleport
+    Raticate Beautifly. Water Medicham to extend our reach to the stars above Mantine
+    Dewgong Stunfisk Politoed. Qui officia deserunt mollit Chimecho Larvitar Delibird
+    Metapod Duskull Teleport. Leech Seed Poliwag deserunt mollit Duosion Kakuna
+    Silver Honchkrow. S.S. Anne Axew Magmar Munchlax Ultra Ball Wigglytuff Staravia.
+    Slash Crobat Shellos Gardevoir Garchomp Raichu Weedle. Ice Torkoal Ledyba Larvesta
+    Umbreon Lickilicky Slugma. Consectetur adipisicing elit Terrakion Dustox Bronzong
+    Infernape Ursaring Spheal.
+
+    <h1>Table</h1>
+    <table style="width:15%">
+  <tr>
+    <th>Name</th>
+    <th>Type</th>
+    <th>Level</th>
+  </tr>
+  <tr>
+    <td>Pickachu</td>
+    <td>Electric</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Butterfree</td>
+    <td>Bug</td>
+    <td>43</td>
+  </tr>
+  <tr>
+    <td>Pidgeotto</td>
+    <td>Flying</td>
+    <td>40</td>
+  </tr>
+</table>
+<h1>List</h1>
+<img src="https://assets.pokemon.com/assets/cms2/img/watch-pokemon-tv/seasons/season01/season01_logo_169_en.jpg"/>
+<ul>Indigo League <a href="https://www.pokemon.com/us/pokemon-episodes/pokemon-tv-seasons/season-1/">Indigo League!</a>
+  <ul>
+    <li>Pickachu</li>
+    <li>Butterfree</li>
+    <li>Pidgeotto
+      <ol>
+        <li> Keen eye</li>
+        <li> Tangled feet</li>
+      </ol></li></ul></ul>
+<img src="https://assets.pokemon.com/assets/cms2/img/watch-pokemon-tv/seasons/season03/season03_logo_169_en.jpg"/>
+<ul>Indigo League <a href="https://www.pokemon.com/us/pokemon-episodes/pokemon-tv-seasons/season-3/">Johto League!</a>
+  <ul>
+    <li>VilePlume</li>
+    <li>VictreebellRaticate</li>
+    <li>Raticate
+      <ol>
+        <li>Run away</li>
+        <li>Guts</li>
+      </ol></li>
+  </ul>
+</ul>
+<h1>Form:</h1>
+<form action="collectData.html">
+  Name: <input type="text"/>
+   <br><br>
+  <label for="Region">Choose a Region:</label>
+   <select name="cars" id="cars">
+     <option value="Region">Region</option>
+     <option value="Indigo">Indigo</option>
+     <option value="Orange Islands">Orange Islands</option>
+     <option value="Johto">Johto</option>
+     <option value="Hoenn">Hoenn</option>
+   </select>
+   <br>
+   <form action="/action_page.php">
+   <p>Please select your starter pokemon:</p>
+   <input type="radio" id="Charmander" name="Starter" value="Charmander">
+   <label for="Charmander">Charmander</label><br>
+   <input type="radio" id="Bulbasaur" name="Starter" value="Bulbasaur">
+   <label for="Bulbasaur">Bulbasaur</label><br>
+   <input type="radio" id="Squirtle" name="Starter" value="Squirtle">
+   <label for="Squirtle">Squirtle</label>
+   <br>
+   <p>Choose your starter items:</p>
+<div>
+  <input type="checkbox" id="Rare Candy" name="Rare Candy"
+         checked>
+  <label for="Rare Candy">Rare Candy</label>
+</div>
+<div>
+  <input type="checkbox" id="Antidote" name="Antidote">
+  <label for="Antidote">Antidote</label>
+</div>
+<div>
+  <input type="checkbox" id="Hyperpotion" name="Hyperpotion">
+  <label for="Hyperpotion">Hyperpotion</label>
+</div>
+<br>
+  <input type="submit"/>
+</form>
   </body>
 </html>
